# adaptive-consensus-networks

./: .gitignore  LOG_2026-07-06.md  PLAN_2026-07-06.md  README.md  acn_v3_flowchart.html  pyproject.toml  train.py  train_adaptive_consensus.py  train_sheaf_fb.py
.devcontainer/: devcontainer.json
.pi/extensions/: ppq-provider.ts
acn/: __init__.py  config.py  consensus.py  decomposition.py  energy.py  eqprop.py  flatstate.py  inspect.py  md_optimizer.py  model.py  networks.py  robustness.py  settle.py  topology.py  train.py  visualize.py  viz_epoch.py
adaptive_consensus/: __init__.py  config.py  graph.py  model.py  train.py  viz.py
scripts/: eval_robustness.py  viz_spotlight.py
sheaf_fb/: __init__.py  config.py  dynamics.py  model.py  task.py  train.py  viz.py
tests/: test_adaptive_consensus.py  test_sheaf_fb.py  test_smoke.py
