[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-consensus"
version = "0.1.0"
description = "Pruning Adaptive Sheaf-ADMM: dynamic edge/channel gating + adaptive halting for multi-agent coordination (PyTorch, MNIST)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.23",
    "matplotlib>=3.6",
    "tqdm>=4.64",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["adaptive_consensus"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
